# poppy_backend_assessment

./: .gitignore  Dockerfile  LICENSE  README.md  TODO.md  setup.cfg  setup.py
notebooks/: validators.ipynb
requirements/: basic.txt  dev.txt  requirements.txt
src/poppy_s/: __version__.py  main.py
src/poppy_s/api/: __init__.py
src/poppy_s/api/v1/: __init__.py  doctors.py  helper_generator.py  medications.py  patients.py  plugins.py  prescription.py  prescriptions.py  users.py
src/poppy_s/config/: __init__.py  app.py  database.py
src/poppy_s/lib/: container.py  database.py
src/poppy_s/lib/helpers/model_helpers/: utils.py
src/poppy_s/lib/helpers/plugin_helpers/: exception.py  interactions.py  medications.py  utils.py  validators.py
src/poppy_s/lib/helpers/routes_helpers/: helper_generator.py
src/poppy_s/lib/models/: __init__.py  doctors.py  interactions.py  interactionsMedicationLink.py  medications.py  multiLinkTableModels.py  patients.py  prescriptionValidationErrors.py  prescriptions.py  prescriptionsMedicationDosage.py  prescriptionsMedicationLink.py
src/poppy_s/lib/models/base/: __init__.py  base.py  interactions.py  medications.py  prescriptions.py
src/poppy_s/lib/models/obsolete/: interactionsMedicationLink.py  prescriptionsMedicationLink.py
src/poppy_s/lib/plugins/: __init__.py
src/poppy_s/lib/plugins/builtin/: nih_data.ipynb  nih_data.py  validators.py
src/poppy_s/lib/plugins/specs/: __init__.py  nih_data.py  routers.py  validators.py
src/poppy_s/lib/schemas/: plugins.py
