[metadata]
name = poppy_s
version = attr: poppy_s.__version__.VERSION
author = Shlomo Kallner
author_email = shlomo.kallner@gmail.com
description = Diagnostic Robotics Backend App Assignment
long_description = file: README.md, CHANGELOG.md, LICENSE.md, TODO.md
#keywords = one, two
license = MIT
classifiers =
    Framework :: FastAPI
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
install_requires =
    requests
    pydantic
    fastapi
    sqlmodel
    typing_extensions
package_dir=
    =src
packages = find_namespace:
python_requires = >=3.10

[options.packages.find]
where=src
include=poppy_s*
exclude=poppy_s.tests*