[metadata]
name = poppy_s
version = attr: poppy_s.__version__.VERSION
author = Shlomo Kallner
author_email = shlomo.kallner@gmail.com
description = Diagnostic Robotics Backend App Assignment
long_description = file: README.md, CHANGELOG.md, LICENSE, TODO.md
#keywords = one, two
license = MIT
classifiers =
    Framework :: FastAPI
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
install_requires =
    requests
    typing_extensions
    pydantic
    fastapi[all]
    sqlmodel>=0.0.8
    #uvicorn[standard]
    # odmantic
    psycopg2
    pluggy

package_dir=
    =src
packages = find_namespace:
python_requires = >=3.10

[options.packages.find]
where=src
include=poppy_s*
exclude=poppy_s.tests*

[options.entry_points]
console_scripts =
    poppy_s_dev_server = poppy_s.main:run_main

[options.extras_require]
dev = 
    pytest
    ipython
    jupyter